# CometTrails

./: .gitignore  LICENSE  NOTICE  README.md  index.html  params.json
Particle_Analyser/Code/: CMakeLists.txt  GET_SPICE.md  PAConfig.h.in  SourceCode.c  readme.md
Particle_Analyser/Code/cspice32/: cspice32_README.txt
Particle_Analyser/Code/resources/: panalyser.rc
Particle_Analyser/Test/: kernels_generic.txt  kernels_spk.txt  readme.md
Particle_Analyser/Test/generic_kernels/: INCLUDE_SPICE_KERNELS_HERE.txt
Particle_Analyser/Test/generic_kernels/pck/: INCLUDE_MASSES_KERNEL_HERE.txt
Particle_Integrator/Code/: CMakeLists.txt  PIConfig.h.in  PI_types.h  README.md  SourceCode.c
Particle_Integrator/Code/Inih/: CMakeLists.txt
Particle_Integrator/Code/Integrators/: IntegEnv.h  RungeKutta4.h  RungeKutta67.h  RungeKutta76.h
Particle_Integrator/Code/cspice64/: cspice64_README.txt
Particle_Integrator/Test/: README.md  kernels_generic.txt
Particle_Integrator/Test/INPUT/: configuration.ini  workunit_1000095_sepangle4_vel1_mass1e-08_HOR_1.txt
Particle_Integrator/Test/generic_kernels/lsk/: INCLUDE_LSK_KERNEL_HERE.txt
Particle_Integrator/Test/generic_kernels/spk/planets/: INCLUDE_PLANET_SPK_KERNEL_HERE.txt
