cmake_minimum_required (VERSION 2.6)
project (Inih)

add_library(Inih ini.c)

IF(MSVC)
	SET(CUSTOM_C_FLAGS "/W4 /O2")
	SET(CUSTOM_C_FLAGS_DEBUG "/Wall /Zi")
ENDIF()
IF(CMAKE_COMPILER_IS_GNUCC)
	SET(CUSTOM_C_FLAGS "-O2 -Wall -std=c99")
	SET(CUSTOM_C_FLAGS_DEBUG "-O0 -Wall -Wextra -std=c99 -g")
ENDIF()

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CUSTOM_C_FLAGS}")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${CUSTOM_C_FLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${CUSTOM_C_FLAGS_DEBUG}")
SET(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${CUSTOM_C_FLAGS}")